...
    <!-- Requires an additional linear layout to wrap around the root view as
        margins will be lost after layout inflation

        Ignore the lint error messages
    -->
    <LinearLayout
        android:id="@+id/singleWorkoutRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/thin_black_border"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
...
                android:src="@drawable/running_icon"
                android:scaleType="fitCenter"
                android:contentDescription="@null"/>

            <!-- Displays the activity type text -->
            <TextView
                android:id="@+id/activityTypeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:layout_weight="3"
...
                    android:text="@string/linear_layout_single_workout_record_distance_text"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/distanceTravelledTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/linear_layout_single_workout_record_zero_km_text"
                    android:textAlignment="center"
                    android:textStyle="bold"
...
                    android:text="@string/linear_layout_single_workout_record_duration_text"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/workoutDurationTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/linear_layout_single_workout_record_zero_duration_text"
                    android:textStyle="bold"
                    android:textAlignment="center"/>
...
                    android:text="@string/linear_layout_single_workout_record_steps_text"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/numberOfStepsTakenTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/linear_layout_single_workout_record_zero_steps_text"
                    android:textAlignment="center"
                    android:textStyle="bold" />
...
                    android:text="@string/linear_layout_single_workout_record_calories_text"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/caloriesConsumedTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/linear_layout_single_workout_record_zero_calories_text"
                    android:textAlignment="center"
                    android:textStyle="bold" />
...


        </LinearLayout>

        <!--Triple Dot more icon-->
        <ImageButton
            android:id="@+id/tripleDotMoreImageButton"
            android:layout_width="31dp"
            android:layout_height="66dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:background="@null"
            android:scaleType="fitCenter"
...
