...
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_marginBottom="5dp"/>

        <Spinner
            android:id="@+id/selectWorkoutTypeSpinner"
            android:layout_width="333dp"
            android:layout_height="70dp"
            android:background="@drawable/thin_black_border"
            android:scaleType="fitStart"
            android:spinnerMode="dropdown"
            android:textAlignment="center" />
...
                android:text="@string/activity_start_workout_start_text"
                android:textColor="@color/black"
                android:textSize="34sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/startWorkoutImageButton" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/startWorkoutImageButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
...
